# req_bug

./: Cargo.toml  message.txt
src/templates/: index.rs
