[package]
name = "req_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwasm = "0.5.0"
sycamore = "0.8.0-beta.6"
serde = { version = "1", features = ["derive"] }

serde_json = "1.0.81"
perseus = { version = "0.4.0-beta.1", features = ["hydrate"] }

#perseus = "0.4.0-beta.1"
# ureq = {version = "2.4.0", features = ["json"]}

ureq = "2"
# openssl = { version = "0.10.38", features = ["v110"] }
lazy_static = "1.4.0"

derive_more = "0.99.17"
reqwest = { version = "0.11.10", features = ["json"] }
#reqwest = "0.11.10"
#tokio = { version = "1.18.1", features = ["full"] }
futures = "0.3.21"
chrono = "0.4.19"
walkdir = "2.3.2"
dotenv = "0.15.0"
config = "0.13.1"
# anyhow = "1.0.57"
# thiserror = "1.0"

# wasm-bindgen-futures = "0.4.1"

# wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }